--- a/index.html
+++ b/index.html
@@ -212,45 +212,111 @@
         <hr />
       </div>
       <div id="functions">
-        <!--case5-->
+        <!--functions-->
         <div class="savol">
-          <h1>
-            case5 . a va b son kiritilsin va unda bajariluvchi amal tanlansin va
-            natija chiqarilsin.
-          </h1>
-          <input type="checkbox" id="case5" />
-          <label class="case_label" for="case5">Case_5</label>
+          <h1>JavaScript Funksiya</h1>
+          <p>
+            JavaScript dasturlash tilida ham boshqa dasturlash tillari singari
+            funksiya mavjud va vazifalari ham o'xshash hisoblanadi. Funksiya
+            uchun qisqacha tarif quyidagicha keltirsak bo'ladi.
+          </p>
+          <span
+            >Funksiya - ma'lum bir vazifa bajarishga mujjallangan bo'lib dastur
+            kodining bir qismi hisoblanib uni qayta-qayta foydalanish imkoniyati
+            bo'lib kod bo'lagidir.</span
+          >
+          <h2>JavaScript Funksiya sintaksisi</h2>
+          <p>
+            Funksiya funksiya nomi va () qavs ichida parametrlar qabul qiladi.
+            Funksiya nomi harflar, sonlar, pastgi chiziq va dollor belgilari
+            bo'lishi mumkin. har bir parametr "," vergul bilan ajratilib
+            ko'rsatiladi. Funksiya tanasi figuraviy qavs ichida yoziladi.
+          </p>
+          <img src="./img/func_img1.png" alt="img" />
+          <h2>Funktsiyani chaqirish</h2>
+          <p>
+            Funksiya <b>return</b> belgisigacha ishlaydi yoki funksiya tanasi
+            oxirigacha bajariladi. Qiymat qaytarish uchun <b>return</b> kalit
+            so'zidan foydalaniladi.
+          </p>
+          <h2>Nima uchun funksiyalar?</h2>
+          <p>
+            Siz yaratgan funksiyadan qayta foydalanish va JavaScript kodining
+            tarkibidagi istalgan joyda o'zingiz yaratgan funksiyaga murojaat
+            qilishingiz mumkin. Bir marta yarating ko'p marta foydalaning.
+          </p>
+          <h1>Function ga oid bir nechta masalar ishlab ko'ramiz</h1>
+          <p>
+            1. Berilgan sondan keyingi sonni qaytaruvchi funksiya
+            yozing.(pastdagi tugmaga bosing va javobni tekshiring)
+          </p>
+
+          <input type="checkbox" id="func1" />
+          <label class="case_label" for="func1">masala_1</label>
           <div class="content">
-            <img src="./img/case5.png" alt="img" />
-            <button onclick="case5()">click here..</button>
+            <img src="./img/funk_img2.png" alt="img" />
+            <button onclick="func1()">click here..</button>
+          </div>
+          <p>2. Berilgan 2 ta son yig'indisini qaytaruvchi funksiya tuzing</p>
+
+          <input type="checkbox" id="func2" />
+          <label class="case_label" for="func2">masala_2</label>
+          <div class="content">
+            <img src="./img/funk_img3.png" alt="img" />
+            <button onclick="func2()">click here..</button>
+          </div>
+          <p>3. Berilgan soatni sekundga aylantiruvchi funksiya tuzing</p>
+
+          <input type="checkbox" id="func3" />
+          <label class="case_label" for="func3">masala_3</label>
+          <div class="content">
+            <img src="./img/funk_img4.png" alt="img" />
+            <button onclick="func3()">click here..</button>
+          </div>
+          <p>
+            4.Kvadrat tomoni berilgan perimetri va yuzini topuvchi funksiya
+            tuzing
+          </p>
+
+          <input type="checkbox" id="func4" />
+          <label class="case_label" for="func4">masala_4</label>
+          <div class="content">
+            <img src="./img/funk_img5.png" alt="img" />
+            <button onclick="func4()">click here..</button>
+          </div>
+          <p>
+            5.Berilgan sonni toq yoki juft ekanini aniqlovchi funksiya tuzing
+          </p>
+
+          <input type="checkbox" id="func5" />
+          <label class="case_label" for="func5">masala_5</label>
+          <div class="content">
+            <img src="./img/funk_img6.png" alt="img" />
+            <button onclick="func5()">click here..</button>
+          </div>
+          <p>
+            6.Berilgan sonni musbat yoki manfiyligini aniqlovchi funksiya tuzing
+          </p>
+
+          <input type="checkbox" id="func6" />
+          <label class="case_label" for="func6">masala_6</label>
+          <div class="content">
+            <img src="./img/funk_img7.png" alt="img" />
+            <button onclick="func6()">click here..</button>
+          </div>
+          <p>
+            7.Yosh kiritilganda odam necha kun va necha soat yashaganini
+            hisoblovchi dastur tuzing.
+          </p>
+
+          <input type="checkbox" id="func7" />
+          <label class="case_label" for="func7">masala_7</label>
+          <div class="content">
+            <img src="./img/funk_img8.png" alt="img" />
+            <button onclick="func7()">click here..</button>
           </div>
         </div>
-        <!--case6-->
-        <div class="savol">
-          <h1>
-            case6 . Ifodalar berilgan 1 Detsimetr 2 kilometr 3 metr ... ifoda
-            tanlab qiymat kiritilganda metrga o'giruvchi programma tuzilsin.
-          </h1>
-          <input type="checkbox" id="case6" />
-          <label class="case_label" for="case6">Case_6</label>
-          <div class="content">
-            <img src="./img/case6.png" alt="img" />
-            <button onclick="case6()">click here..</button>
-          </div>
-        </div>
-        <!--case7-->
-        <div class="savol">
-          <h1>
-            case7 . 1 Kilogram 2 Milligram 3 gramm 4 Tonna 5 senter berilgan
-            qiymatni kilogrammda ifodalovchi programma tuzilsin.
-          </h1>
-          <input type="checkbox" id="case7" />
-          <label class="case_label" for="case7">Case_7</label>
-          <div class="content">
-            <img src="./img/case7.png" alt="img" />
-            <button onclick="case7()">click here..</button>
-          </div>
-        </div>
+
         <!--if davomi -->
       </div>
       <div id="objects">
