--- a/index.html
+++ b/index.html
@@ -215,6 +215,15 @@
         <!--functions-->
         <div class="savol">
           <h1>JavaScript Funksiya</h1>
+          <p id="tenx_funksiya-qoida">
+            <b
+              >Tenx qoida funcsiyalar <br />Funksiyalar 2 turga bo'linadi <br />
+              1. return bor <br />2 return yuq <br />
+              return bor funksiyalarga qiymat qaytaradigan funksiyalar <br />
+              reeturn yuq funksiyalar qiymat qaytarmaydigna funksiyalar deb
+              ataladi (void)</b
+            >
+          </p>
           <p>
             JavaScript dasturlash tilida ham boshqa dasturlash tillari singari
             funksiya mavjud va vazifalari ham o'xshash hisoblanadi. Funksiya
@@ -525,6 +534,14 @@
             - yoqtirgan mevangizni kiriting // nok // sizning yotirgan
             mevalaringiz: kiwi, banan, nok // agar yo'q bo'lsa tanlovi // meva
             ham yeb tur fast food yeyavermasdan
+          </p>
+          <h1>uyga vazifa filmlar 0</h1>
+          <p>
+            1 siz filmlarga qiziqasizmi ? <br />
+            agar qiziqsa xa bo'lsa <br />
+            2 Yoqtirgan janringizni tanlang ? <br />
+            3 Tanlangan janr bo'yicha nechta kinosini yoqtirasiz? <br />
+            4.nomlarini kiriting
           </p>
           <input type="checkbox" id="arr1" />
           <label class="for_label" for="arr1">Uyga vazifa</label>
