--- a/index.html
+++ b/index.html
@@ -216,9 +216,18 @@
         <!--functions-->
         <div class="savol">
           <h1>Funksiyalar</h1>
-
-          <img src="./img/funksiya_img1.png" alt="img" />
-          <img src="./img/funksiya_img2.png" alt="img" />
+          <h2>Function turlari</h2>
+          <ol>
+            <li>Function decloration</li>
+            <li>Function expression</li>
+            <li>Arrow function</li>
+          </ol>
+          <h1>1.Function decloration</h1>
+          <img src="./img/functiondecloration.png" alt="img" />
+          <h1>2.Function expression</h1>
+          <img src="./img/function expression.png" alt="img" />
+          <h1>3.Arrow Function</h1>
+          <img src="./img/Arrow function.png" alt="img" />
         </div>
         <hr />
         <!--1-topshiriq-->
@@ -233,8 +242,17 @@
             <input type="checkbox" id="fun1" />
             <label for="fun1">Bosing</label>
             <div class="content">
-              <img src="./img/funk_img2.png" alt="img" />
-              <button onclick="func1()">click here..</button>
+              <img src="./img/funcdec1.png" alt="img" />
+              <img id="strelka" src="./img/strelka.png" alt="img" />
+              <button onclick="funcdec1()">Function decloration</button>
+
+              <img src="./img/funcexp1.png" alt="img" />
+              <img id="strelka" src="./img/strelka.png" alt="img" />
+              <button onclick="funcexp1()">Function expression</button>
+
+              <img src="./img/funcarr1.png" alt="img" />
+              <img id="strelka" src="./img/strelka.png" alt="img" />
+              <button onclick="funcarr1()">Function Arrow</button>
             </div>
           </div>
         </div>
@@ -246,8 +264,15 @@
             <input type="checkbox" id="fun2" />
             <label for="fun2">Bosing</label>
             <div class="content">
-              <img src="./img/funk_img3.png" alt="img" />
-              <button onclick="func2()">click here..</button>
+              <img src="./img/funcdec2.png" alt="img" />
+              <img id="strelka" src="./img/strelka.png" alt="img" />
+              <button onclick="funcdec2()">Function decloration</button>
+              <img src="./img/funcexp2.png" alt="img" />
+              <img id="strelka" src="./img/strelka.png" alt="img" />
+              <button onclick="funcexp2()">Function expression</button>
+              <img src="./img/funcarr2.png" alt="img" />
+              <img id="strelka" src="./img/strelka.png" alt="img" />
+              <button onclick="funcarr2()">Function Arrow</button>
             </div>
           </div>
         </div>
@@ -259,8 +284,15 @@
             <input type="checkbox" id="fun3" />
             <label for="fun3">Bosing</label>
             <div class="content">
-              <img src="./img/funk_img4.png" alt="img" />
-              <button onclick="func3()">click here..</button>
+              <img src="./img/funcdec3.png" alt="img" />
+              <img id="strelka" src="./img/strelka.png" alt="img" />
+              <button onclick="funcdec3()">Function decloration</button>
+              <img src="./img/funcexp3.png" alt="img" />
+              <img id="strelka" src="./img/strelka.png" alt="img" />
+              <button onclick="funcexp3()">Function expression</button>
+              <img src="./img/funcarr3.png" alt="img" />
+              <img id="strelka" src="./img/strelka.png" alt="img" />
+              <button onclick="funcarr3()">Function Arrow</button>
             </div>
           </div>
         </div>
@@ -275,8 +307,15 @@
             <input type="checkbox" id="fun4" />
             <label for="fun4">Bosing</label>
             <div class="content">
-              <img src="./img/funk_img5.png" alt="img" />
-              <button onclick="func4()">click here..</button>
+              <img src="./img/funcdec4.png" alt="img" />
+              <img id="strelka" src="./img/strelka.png" alt="img" />
+              <button onclick="funcdec4()">Function decloration</button>
+              <img src="./img/funcexp4.png" alt="img" />
+              <img id="strelka" src="./img/strelka.png" alt="img" />
+              <button onclick="funcexp4()">Function expression</button>
+              <img src="./img/funcarr4.png" alt="img" />
+              <img id="strelka" src="./img/strelka.png" alt="img" />
+              <button onclick="funcarr4()">Function Arrow</button>
             </div>
           </div>
         </div>
@@ -290,8 +329,15 @@
             <input type="checkbox" id="fun5" />
             <label for="fun5">Bosing</label>
             <div class="content">
-              <img src="./img/funk_img6.png" alt="img" />
-              <button onclick="func5()">click here..</button>
+              <img src="./img/funcdec5.png" alt="img" />
+              <img id="strelka" src="./img/strelka.png" alt="img" />
+              <button onclick="funcdec5()">Function decloration</button>
+              <img src="./img/funcexp5.png" alt="img" />
+              <img id="strelka" src="./img/strelka.png" alt="img" />
+              <button onclick="funcexp5()">Function expression</button>
+              <img src="./img/funcarr5.png" alt="img" />
+              <img id="strelka" src="./img/strelka.png" alt="img" />
+              <button onclick="funcarr5()">Function Arrow</button>
             </div>
           </div>
         </div>
@@ -306,8 +352,15 @@
             <input type="checkbox" id="fun6" />
             <label for="fun6">Bosing</label>
             <div class="content">
-              <img src="./img/funk_img7.png" alt="img" />
-              <button onclick="func6()">click here..</button>
+              <img src="./img/funcdec6.png" alt="img" />
+              <img id="strelka" src="./img/strelka.png" alt="img" />
+              <button onclick="funcdec6()">Function decloration</button>
+              <img src="./img/funcexp6.png" alt="img" />
+              <img id="strelka" src="./img/strelka.png" alt="img" />
+              <button onclick="funcexp6()">Function expression</button>
+              <img src="./img/funcarr6.png" alt="img" />
+              <img id="strelka" src="./img/strelka.png" alt="img" />
+              <button onclick="funcarr6()">Function Arrow</button>
             </div>
           </div>
         </div>
@@ -322,8 +375,15 @@
             <input type="checkbox" id="fun7" />
             <label for="fun7">Bosing</label>
             <div class="content">
-              <img src="./img/funk_img8.png" alt="img" />
-              <button onclick="func7()">click here..</button>
+              <img src="./img/funcdec7.png" alt="img" />
+              <img id="strelka" src="./img/strelka.png" alt="img" />
+              <button onclick="funcdec7()">Function decloration</button>
+              <img src="./img/funcexp7.png" alt="img" />
+              <img id="strelka" src="./img/strelka.png" alt="img" />
+              <button onclick="funcexp7()">Function expression</button>
+              <img src="./img/funcarr7.png" alt="img" />
+              <img id="strelka" src="./img/strelka.png" alt="img" />
+              <button onclick="funcarr7()">Function Arrow</button>
             </div>
           </div>
         </div>
@@ -350,7 +410,7 @@
             <label for="fun8">Bosing</label>
             <div class="content">
               <img src="./img/funk_img9.png" alt="img" />
-              <button onclick="func8()">click here..</button>
+              <button onclick="funcdec8()">Function decloration</button>
             </div>
           </div>
         </div>
